# magenta-realtime

./: .env  .gitignore  MODEL.md  README.md  REAL_MAGENTA_RT_SETUP.md  SETUP.md  STUDIO_README.md  package-lock.json  package.json  pyproject.toml  setup-magenta-rt.sh  setup.py  start-backend.bat  start-backend.sh  test_complete_setup.py  test_jax_cuda.py
backend/: main.py  requirements.txt
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/: MagentaRTStudio.tsx
frontend/src/hooks/: useAudioGeneration.ts  useRealTimeGeneration.ts
magenta_rt/: asset.py  asset_test.py  audio.py  audio_test.py  fetch_asset.py  musiccoca.py  spectrostream.py  spectrostream_test.py  system.py  system_test.py  utils.py
magenta_rt/colab/: utils.py  widgets.py
magenta_rt/colab/static/html/: ui.html
magenta_rt/colab/static/js/: ring_buffer.js  streamer.js
magenta_rt/depthformer/: decode.py  decode_test.py  model.py  modules.py  modules_test.py
magenta_rt/depthformer/configs/: magenta_rt.gin  mrt_merged_base.gin  mrt_merged_large.gin  size_base.gin
notebooks/: Magenta_RT_Demo.ipynb
test/: magenta_rt_end2end_test.py  musiccoca_end2end_test.py  spectrostream_end2end_test.py
